# Unimol-tools-adaptor

./: .gitignore  main.py  pyproject.toml
archive/: adapter_precomputed_sdf.py
experiments/: esol.yaml  freesolv.yaml  lipophilicity.yaml  qm7.yaml  qm8.yaml  qm9.yaml
scripts/: adapter_lib.py  adapter_precomputed_sdf.py
