[project]
name = "unimol-tools-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "rdkit>=2025.3.5",
    "torch-geometric>=2.6.1",
    "unimol-tools>=0.1.4.post1",
]
